Added initial changes for odp support with vpp.
Change-Id: Ieb5c099c360cddd6f6b784da2838d543ceb1cb92
Signed-off-by: srsurend <srsurend@cisco.com>
Signed-off-by: sachin saxena <sachin.saxena@nxp.com>

--- a/vpp/vnet/Makefile.am
+++ b/vpp/vnet/Makefile.am
@@ -784,6 +784,19 @@ libvnet_la_SOURCES +=				\
 nobase_include_HEADERS +=			\
   vnet/devices/netmap/netmap.h
 
+########################################
+# ODP interface
+########################################
+if WITH_ODPLIB
+libvnet_la_SOURCES +=                           \
+  vnet/devices/odp/odp_packet.c			\
+  vnet/devices/odp/device.c			\
+  vnet/devices/odp/node.c			\
+  vnet/devices/odp/cli.c
+
+nobase_include_HEADERS +=                       \
+  vnet/devices/odp/odp_packet.h
+endif
 
 ########################################
 # Driver feature graph arc support
