Introducing ODP plugin node
Change-Id: I364fa14ade5282ec828662894041f9cc784ace7c
Signed-off-by: srsurend <srsurend@cisco.com>
Signed-off-by: sachin saxena <sachin.saxena@nxp.com>

--- a/src/configure.ac
+++ b/src/configure.ac
@@ -104,13 +104,20 @@ WITH_ARG(dpdk_mlx5_pmd,	[Use DPDK with mlx5 PMD])
 WITHOUT_ARG(libssl,	[Disable libssl])
 WITHOUT_ARG(apicli,	[Disable binary api CLI])
 
+AC_ARG_WITH(odplib,
+            AC_HELP_STRING([--with-odplib],[Use odplib]),
+            [with_odplib=1],
+            [with_odplib=0])
+
+AM_CONDITIONAL(WITH_ODPLIB, test $with_odplib = 1)
+
 AC_ARG_WITH(unix,
             AC_HELP_STRING([--with-unix],[Compile unix version of clib]),
 	    [],
 	    [case $host_os in
 	      darwin* | linux*) with_unix=yes;;
 	      *) with_unix=no;;
-	      esac])
+	     esac])
 
 AM_CONDITIONAL(WITH_UNIX, test "$with_unix" = "yes")
 
@@ -155,6 +162,8 @@ PLUGIN_ENABLED(lb)
 PLUGIN_ENABLED(memif)
 PLUGIN_ENABLED(sixrd)
 PLUGIN_ENABLED(snat)
+AM_COND_IF([WITH_ODPLIB],
+[PLUGIN_ENABLED(odp)],[PLUGIN_DISABLED(odp)])
 
 ###############################################################################
 # Dependency checks
