Add initial support for ODP buffers.
Based on patch from Sreejith Surendran Nair.

Change-Id: I32ff73871ce0439378a7e3f0f9a93ac169e770cb
Signed-off-by: Michal Mazur <mkm@semihalf.com>
Signed-off-by: Sreejith Surendran Nair <srsurend@cisco.com>
Signed-off-by: Sachin Saxena <sachin.saxena@nxp.com>

--- a/src/plugins/odp.am
+++ b/src/plugins/odp.am
@@ -18,7 +18,8 @@ odp_plugin_la_LDFLAGS = $(AM_LDFLAGS) $(ODP_LIBS)
 odp_plugin_la_SOURCES = odp/cli.c	\
 	odp/node.c			\
 	odp/odp_packet.c		\
-	odp/device.c
+	odp/device.c			\
+	odp/buffer.c
 
 noinst_HEADERS += odp/odp_packet.h
 
