--- a/src/plugins/odp.am
+++ b/src/plugins/odp.am
@@ -19,7 +19,8 @@ odp_plugin_la_SOURCES = odp/cli.c	\
 	odp/node.c			\
 	odp/odp_packet.c		\
 	odp/device.c			\
-	odp/buffer.c
+	odp/buffer.c                    \
+        odp/thread.c
 
 noinst_HEADERS += odp/odp_packet.h
 
