Read ODP configuration from VPP startup config
  1) Allow to setup size of allocated memory, number of packets in the
     pool, number of packets in transmit burst and delay in scheduler
     mode from VPP startup file.
     More details are in template: src/vpp/conf/startup.conf
  2) Separate Rx mode from Tx mode. Traffic Manager is not supported.
  3) Devices defined in VPP startup are automatically created at start.

Change-Id: I1f8a3c2900f56cb23ce6997d311cfe55e1c2078c
Signed-off-by: Michal Mazur <mkm@semihalf.com>

--- a/src/vpp/conf/startup.conf
+++ b/src/vpp/conf/startup.conf
@@ -98,6 +98,42 @@ cpu {
 	# socket-mem 2048,2048
 # }
 
+# odp {
+	# platform-params {
+	#   memory 100
+	# }
+
+	## Number of packets in allocated pool
+	# num-pkts-in-pool 10240
+
+	## Delay in microseconds between calls to odp_schedule_multi
+	# rx-sched-wait 0
+
+	## Limit of output burst size. May increase performance.
+	# tx-burst-size 32
+
+	## Default configuration for all ODP devices.
+	## rx-mode can be set to burst, queue or sched
+	## tx-mode can be burst, queue or tm (traffic manager)
+	## num-rx-queues can be set to more than 1 to enable RSS
+	## num-tx-queues can be 'max' (separate queue for each thread) or 1
+	# default {
+	#   rx-mode burst
+	#   tx-mode burst
+	#   num-rx-queues 1
+	#   num-tx-queues max
+	# }
+
+	## Defined ODP devices are created automatically at startup.
+	## dev (DPDK port number) [{ options }]
+	## hw-addr - if not specified, MAC will be read from hardware
+	# dev 0 {
+	#   rx-mode queue
+	#   num-rx-queues 2
+	#   hw-addr 3c:fd:fe:a4:37:99
+	# }
+# }
+
 # Adjusting the plugin path depending on where the VPP plugins are:
 #plugins
 #{
