plugins: odp: Add ODP-IPsec node
Based heavily on the src/vnet/ipsec.

Reuses the pure software VPP IPsec implementation
CLI command. To use enable-odp-crypto needs to be
present in the odp section of startup configuration,
like this:

odp {
	enable-odp-crypto
}

Currenlty only IPv4 is supported, and only in transport
mode.

Authentication headers are not supported, this limitation
is inherited from VPP.

Supported crypto algorithms are
aes-cbc-128 for encryption, and
sha-512-256, sha-256-128, sha1-96 for authentication

Change-Id: I08c66f96a73d8cb4ef1095f181ddf47506abc39a
Signed-off-by: Szymon Sliwa <szs@semihalf.com>

--- a/src/plugins/odp.am
+++ b/src/plugins/odp.am
@@ -15,13 +15,18 @@ vppplugins_LTLIBRARIES += odp_plugin.la
 
 odp_plugin_la_LDFLAGS = $(AM_LDFLAGS) $(ODP_LIBS)
 
-odp_plugin_la_SOURCES = odp/cli.c	\
-	odp/node.c			\
-	odp/odp_packet.c		\
-	odp/device.c			\
-	odp/buffer.c                    \
-        odp/thread.c
+odp_plugin_la_SOURCES = odp/cli.c		\
+	odp/node.c				\
+	odp/odp_packet.c			\
+	odp/device.c				\
+	odp/buffer.c				\
+        odp/thread.c				\
+	odp/ipsec/ipsec.c			\
+	odp/ipsec/esp_encrypt.c			\
+	odp/ipsec/esp_decrypt.c
 
-noinst_HEADERS += odp/odp_packet.h
+noinst_HEADERS += odp/odp_packet.h    		\
+	odp/ipsec/ipsec.h			\
+	odp/ipsec/esp.h
 
 # vi:syntax=automake
