--- a/src/vpp/conf/startup.conf
+++ b/src/vpp/conf/startup.conf
@@ -129,6 +129,9 @@ cpu {
 	#   num-rx-queues 2
 	#   hw-addr 3c:fd:fe:a4:37:99
 	# }
+
+	## Make use of ODP crypto API to accelerate IPsec
+	# enable-odp-crypto
 # }
 
 # Adjusting the plugin path depending on where the VPP plugins are:
