Fix and improve Rx Scheduler mode
Fix support of atomic mode and add two new modes: parallel and ordered.
Three modes of synchronization between threads are supported now:
 - parallel - no synchronization between events
 - ordered - relative sequence of events is restored in output queues
 - atomic - only a single thread may process events from a single queue

Change-Id: I9399aa601f0927042ac0f7f1e5f265f4d47724b8
Signed-off-by: Michal Mazur <mkm@semihalf.com>

--- a/src/vpp/conf/startup.conf
+++ b/src/vpp/conf/startup.conf
@@ -101,6 +101,7 @@ cpu {
 # odp {
 	# platform-params {
 	#   memory 100
+	#   cmdline { <additional-parameters> }
 	# }
 
 	## Number of packets in allocated pool
@@ -113,8 +114,9 @@ cpu {
 	# tx-burst-size 32
 
 	## Default configuration for all ODP devices.
-	## rx-mode can be set to burst, queue or sched
-	## tx-mode can be burst, queue or tm (traffic manager)
+	## rx-mode can be set to burst (default), queue, sched(-atomic),
+	## 	sched-ordered, sched-parallel
+	## tx-mode can be burst (default) or queue (forced for sched-ordered)
 	## num-rx-queues can be set to more than 1 to enable RSS
 	## num-tx-queues can be 'max' (separate queue for each thread) or 1
 	# default {
