--- a/src/plugins/odp.am
+++ b/src/plugins/odp.am
@@ -23,7 +23,9 @@ odp_plugin_la_SOURCES = odp/cli.c		\
         odp/thread.c				\
 	odp/ipsec/ipsec.c			\
 	odp/ipsec/esp_encrypt.c			\
+	odp/ipsec/esp_encrypt_ipsec_api.c	\
 	odp/ipsec/esp_decrypt.c			\
+	odp/ipsec/esp_decrypt_ipsec_api.c	\
 	odp/ipsec/crypto_input.c
 
 noinst_HEADERS += odp/odp_packet.h    		\
