plugins: odp: Add support for IPsec inline operation
To use inline mode put inline flag in the odp section
of the startup.conf file, like this:

odp {
    enable-odp-ipsec
    inline
}

Falls back to lookaside mode.

Change-Id: I1292a7254b25a15b25285773a43bae112394827d
Signed-off-by: Szymon Sliwa <szs@semihalf.com>

--- a/src/vpp/conf/startup.conf
+++ b/src/vpp/conf/startup.conf
@@ -138,6 +138,9 @@ cpu {
 
 	## To use asynchronous mode of the crypto/ipsec operations
 	# async
+
+	## To use inline mode of ipsec
+	# inline
 # }
 
 # Adjusting the plugin path depending on where the VPP plugins are:
