plugins: odp: Add support for async crypto mode
By default ipsec picks asynchronuous crypto. After the operation it may
turn out that the operation was performed synchronously anyways, in such
case the packet is send further by the esp_* node because there will be
no notification event sent about the crypto completion.

To use asynchronous mode put async in the odp section
of the startup.conf file,
like this:

odp {
	async
}

Falls back to synchronous mode.

Change-Id: I5301df5f1c93a5ccd53a9c0ed2c4cacb9ca5fdd4
Signed-off-by: Szymon Sliwa <szs@semihalf.com>

--- a/src/plugins/odp.am
+++ b/src/plugins/odp.am
@@ -23,7 +23,8 @@ odp_plugin_la_SOURCES = odp/cli.c		\
         odp/thread.c				\
 	odp/ipsec/ipsec.c			\
 	odp/ipsec/esp_encrypt.c			\
-	odp/ipsec/esp_decrypt.c
+	odp/ipsec/esp_decrypt.c			\
+	odp/ipsec/crypto_input.c
 
 noinst_HEADERS += odp/odp_packet.h    		\
 	odp/ipsec/ipsec.h			\
