--- a/src/vpp/conf/startup.conf
+++ b/src/vpp/conf/startup.conf
@@ -132,6 +132,9 @@ cpu {
 
 	## Make use of ODP crypto API to accelerate IPsec
 	# enable-odp-crypto
+	
+	## To use asynchronous mode of the crypto operations
+	# async
 # }
 
 # Adjusting the plugin path depending on where the VPP plugins are:
